--- a/client/src/assets/styles/MapComponent.scss
+++ b/client/src/assets/styles/MapComponent.scss
@@ -3,3 +3,14 @@
   height: 100vh;
   position: relative;
 }
+
+.ol-icon {
+  width: 150px;
+  height: 32px;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.ol-pointer {
+  cursor: pointer;
+}
